Thu Feb 17 14:01:34 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/htdig-3.1.5.spec: Fix silly typos in %post script,
	make cron script a %config file.

Thu Feb 17 10:34:05 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	[ Improve htsearch's HTML 4.0 compliance ]
	* htsearch/TemplateList.cc (createFromString): Use file name rather
	than internal name to select builtin-* templates, use $&(TITLE) in
	templates and quote HTML tag parameters.
	* installdir/long.html, installdir/short.html: Use $&(TITLE) in
	templates and quote HTML tag parameters.
	* htsearch/Display.cc (setVariables): quote all HTML tag parameters
	in generated select lists.
	* installdir/footer.html, installdir/header.html,
	installdir/nomatch.html, installdir/search.html,
	installdir/syntax.html, installdir/wrapper.html:
	Use $&(var) where appropriate, and quote HTML tag parameters.

Thu Feb 17 10:00:26 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/htdig-3.1.5.spec: Fix %post script to add more descriptive
	htdig.conf entries.

Wed Feb 16 16:26:05 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/htdig-3.1.5.spec, contrib/htdig-3.1.5-conf.patch,
	htdoc/where.html, .version, README: Bump to version 3.1.5.
	* htdoc/THANKS.html: Added new contributors.
	* htdoc/FAQ.html, htdoc/main.html: Updated to versions from web site.

Wed Feb 16 15:49:28 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/Configuration.h, htlib/Configuration.cc: split Add() method
	into Add() and AddParsed(), so that only config attributes get parsed.
	Use AddParsed() only in Read() and Defaults().

Wed Feb 16 15:02:47 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/URL.h (encodeURL): Change list of valid characters to
	include only unreserved ones.
	* htlib/cgi.cc (init): Allow "&" and ";" as input parameter separators.
	* htsearch/Display.cc (createURL): Encode each parameter separately,